[project]
name = "nagiosplugin-stubs"
version = "0.7.0"
description = "Type stubs for the nagiosplugin package."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.8,<4"
readme = "README.rst"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Typing :: Stubs Only",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["typing-extensions>=4.3.0,<5"]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/nagiosplugin-stubs"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
]
